--- a/backend/package.json
+++ b/backend/package.json
@@ -3,11 +3,13 @@
   "version": "1.0.0",
   "description": "Backend API for Mento App - Mentorship Platform",
   "main": "server.js",
-  "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "jest"
-  },
+ "scripts": {
+  "start": "node server.js",
+  "dev": "nodemon server.js",
+  "test": "jest",
+  "build": "echo 'No build step required'"
+}
+,
   "keywords": [
     "mentorship",
     "nodejs",
